Backspace não volta no browser

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+  <meta charset="UTF-8">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
+FAÇA SUA PERGUNTA AO SUED:<br>
 <div id="text-entry"></div>
 </body>
 </html>
