--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <meta charset="UTF-8">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-FAÇA SUA PERGUNTA AO SUED:<br>
-<div id="text-entry"></div>
+  <div id="content">
+    <img src="img/telaSuedOlhos.png"/>
+    <div id="question-input">
+      <div id="text-entry"></div>
+      <img id="cursor" class="blink" src="img/caveira.png"/>
+    </div>
+    <img src="img/telaSuedSangue.png"/>
+    <div id="answer-frame">
+      <img src="img/resp2.png"/>
+    </div>
+  </div>
 </body>
 </html>
