--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img src="img/telaSuedSangue.png"/>
     <div id="answer-frame">
       <img src="img/resp2.png"/>
+        <div id="answer"></div>
     </div>
   </div>
 </body>
