Achei o gif do sangue :)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="text-entry"></div>
       <img id="cursor" class="blink" src="img/caveira.png"/>
     </div>
-    <img src="img/telaSuedSangue.png"/>
+    <img class="width-strech" src="img/sangue.gif"/>
     <div id="answer-frame">
       <img src="img/resp2.png"/>
         <div id="answer"></div>
