Animação na resposta e ajustes de tamanho

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img class="width-strech" src="img/sangue.gif"/>
     <div id="answer-frame">
       <img src="img/resp2.png"/>
-        <div id="answer"></div>
+        <div id="answer" class="small-zoom"></div>
     </div>
   </div>
 </body>
