Gif na resposta e animação de zoom de resposta mais lenta

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <img class="width-strech" src="img/sangue.gif"/>
     <div id="answer-frame">
-      <img src="img/resp2.png"/>
+      <img src="img/resp.gif"/>
         <div id="answer" class="small-zoom"></div>
     </div>
   </div>
