adding all file changes to show HD images;

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ Essa é uma tentativa de reconstruir O SUED em html." />i
 </head>
 <body>
   <div id="content">
-    <img src="img/telaSuedOlhos.png"/>
+    <img class="background-image" src="img/telaSuedOlhos.png"/>
     <div id="question-input">
       <div id="text-entry"></div>
-      <img id="cursor" class="blink" src="img/caveira.png"/>
+      <img id="cursor" class="blink skull-size" src="img/caveira.png"/>
     </div>
     <img class="width-strech" src="img/sangue.gif"/>
     <div id="answer-frame">
