--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 Hoje você só encontra o instalador do sued em sites de download que não parecem muito confiáveis.
 Essa é uma tentativa de reconstruir O SUED em html." />i
   <title>SUED - Sua última esperança divina ou o contrário de Deus</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
+  <script src="jquery.min.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
